// protoc --proto_path=./proto --go_out=./pbs --go-grpc_out=./pbs ./proto/fileService.proto

syntax = "proto3";

import "google/protobuf/empty.proto";

option go_package = "./;pbs";

package pbs;

service FileService {
    rpc HeartBeat(google.protobuf.Empty) returns (HeartBeatResponse) {};
    rpc UploadFile(stream UploadFileRequest) returns (UploadFileResponse) {};
}

message HeartBeatResponse {
    string Beat = 1;
}

message UploadFileRequest {
    oneof data {
        FileInfo metadata   = 1;
        bytes    chunk_data = 2;
    }
}

message FileInfo {
    string speaker_id = 1;
    string model_id   = 2;
}

message UploadFileResponse {
    Status status     = 1;
    string speaker_id = 2;
    string model_id   = 3;
}

enum Status {
    SUCCESS = 0;
    FAILED  = 1;
}